--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
             <span id="equal">=</span>
      </div>
    </div>
-   <script src="./Script.js"></script>
+   <script src="./main.js"></script>
 </body>
 </html>
